--- a/1-3 Dolphin Ride/Swampy Woodlands Tileset.tileset.ini
+++ b/1-3 Dolphin Ride/Swampy Woodlands Tileset.tileset.ini
@@ -4,104 +4,110 @@ cols=6
 name=Swampy Woodlands Tileset
 type=0
 
-[item-5-0]
-id=25
-
-[item-5-1]
-id=26
-
 [item-4-0]
 id=94
+type=0
 
 [item-4-1]
 id=95
+type=0
 
 [item-3-0]
 id=97
+type=0
 
 [item-3-1]
 id=98
+type=0
 
 [item-4-2]
 id=332
+type=0
 
 [item-2-1]
 id=421
+type=0
 
 [item-1-1]
 id=422
+type=0
 
 [item-0-1]
 id=423
+type=0
 
 [item-0-0]
 id=425
+type=0
 
 [item-2-0]
 id=426
+type=0
 
 [item-0-2]
 id=427
+type=0
 
 [item-2-2]
 id=436
+type=0
 
 [item-1-0]
 id=424
+type=0
 
 [item-0-3]
 id=418
+type=0
 
 [item-0-4]
 id=416
+type=0
 
 [item-1-4]
 id=415
+type=0
 
 [item-1-3]
 id=417
-
-[item-3-4]
-id=356
-
-[item-3-3]
-id=354
-
-[item-2-3]
-id=353
-
-[item-2-4]
-id=355
+type=0
 
 [item-1-5]
 id=231
+type=0
 
 [item-2-5]
 id=232
+type=0
 
 [item-0-5]
 id=230
+type=0
 
 [item-1-2]
 id=419
+type=0
 
 [item-3-2]
 id=184
-
-[item-3-5]
-id=27
+type=0
 
 [item-4-3]
 id=335
+type=0
 
 [item-4-5]
 id=405
+type=0
 
 [item-4-4]
 id=30
+type=0
 
 [item-5-3]
 id=334
+type=0
 
 [item-5-2]
 id=333
+type=0
