--- a/1-4 Barrels of Fun/SGBlocks.tileset.ini
+++ b/1-4 Barrels of Fun/SGBlocks.tileset.ini
@@ -6,387 +6,524 @@ type=0
 
 [item-2-0]
 id=7
+type=0
 
 [item-3-0]
 id=3
+type=0
 
 [item-4-0]
 id=6
+type=0
 
 [item-5-0]
 id=496
+type=0
 
 [item-6-0]
 id=497
+type=0
 
 [item-7-0]
 id=498
+type=0
 
 [item-8-0]
 id=499
+type=0
 
 [item-9-0]
 id=500
+type=0
 
 [item-10-0]
 id=501
+type=0
 
 [item-11-0]
 id=502
+type=0
 
 [item-12-0]
 id=503
+type=0
 
 [item-13-0]
 id=504
+type=0
 
 [item-0-1]
 id=1
+type=0
 
 [item-1-1]
 id=531
+type=0
 
 [item-2-1]
 id=15
+type=0
 
 [item-3-1]
 id=16
+type=0
 
 [item-4-1]
 id=17
+type=0
 
 [item-5-1]
 id=14
+type=0
 
 [item-6-1]
 id=1115
+type=0
 
 [item-7-1]
 id=490
+type=0
 
 [item-8-1]
 id=491
+type=0
 
 [item-9-1]
 id=492
+type=0
 
 [item-10-1]
 id=493
+type=0
 
 [item-11-1]
 id=494
+type=0
 
 [item-12-1]
 id=495
+type=0
 
 [item-0-2]
 id=533
+type=0
 
 [item-1-2]
 id=532
+type=0
 
 [item-2-2]
 id=274
+type=0
 
 [item-3-2]
 id=276
+type=0
 
 [item-4-2]
 id=275
+type=0
 
 [item-5-2]
 id=12
+type=0
 
 [item-6-2]
 id=13
+type=0
 
 [item-0-3]
 id=534
+type=0
 
 [item-1-3]
 id=752
+type=0
 
 [item-2-3]
 id=9
+type=0
 
 [item-3-3]
 id=94
+type=0
 
 [item-4-3]
 id=95
+type=0
 
 [item-5-3]
 id=96
+type=0
 
 [item-6-3]
 id=10
+type=0
 
 [item-7-3]
 id=305
+type=0
 
 [item-8-3]
 id=359
+type=0
 
 [item-9-3]
 id=358
+type=0
 
 [item-10-3]
 id=307
+type=0
 
 [item-11-3]
 id=306
+type=0
 
 [item-0-4]
 id=535
+type=0
 
 [item-1-4]
 id=536
+type=0
 
 [item-2-4]
 id=11
+type=0
 
 [item-3-4]
 id=97
+type=0
 
 [item-4-4]
 id=98
+type=0
 
 [item-5-4]
 id=99
+type=0
 
 [item-6-4]
 id=18
+type=0
 
 [item-7-4]
 id=1071
+type=0
 
 [item-8-4]
 id=313
+type=0
 
 [item-9-4]
 id=311
+type=0
 
 [item-10-4]
 id=1072
+type=0
 
 [item-11-4]
 id=1069
+type=0
 
 [item-12-4]
 id=1070
+type=0
 
 [item-0-5]
 id=538
+type=0
 
 [item-1-5]
 id=537
+type=0
 
 [item-2-5]
 id=19
+type=0
 
 [item-3-5]
 id=100
+type=0
 
 [item-4-5]
 id=101
+type=0
 
 [item-5-5]
 id=102
+type=0
 
 [item-6-5]
 id=20
+type=0
 
 [item-7-5]
 id=312
+type=0
 
 [item-8-5]
 id=360
+type=0
 
 [item-9-5]
 id=357
+type=0
 
 [item-10-5]
 id=314
+type=0
 
 [item-0-6]
 id=539
+type=0
 
 [item-1-6]
 id=543
+type=0
 
 [item-3-6]
 id=128
+type=0
 
 [item-4-6]
 id=129
+type=0
 
 [item-0-7]
 id=540
+type=0
 
 [item-1-7]
 id=544
+type=0
 
 [item-2-7]
 id=345
+type=0
 
 [item-5-8]
 id=352
+type=0
 
 [item-0-9]
 id=545
+type=0
 
 [item-1-9]
 id=546
+type=0
 
 [item-2-9]
 id=547
+type=0
 
 [item-3-9]
 id=548
+type=0
 
 [item-4-9]
 id=549
+type=0
 
 [item-5-9]
 id=550
+type=0
 
 [item-6-9]
 id=551
+type=0
 
 [item-7-9]
 id=755
+type=0
 
 [item-8-9]
 id=756
+type=0
 
 [item-9-9]
 id=346
+type=0
 
 [item-10-9]
 id=1237
+type=0
 
 [item-0-10]
 id=554
+type=0
 
 [item-1-10]
 id=555
+type=0
 
 [item-2-10]
 id=556
+type=0
 
 [item-3-10]
 id=557
+type=0
 
 [item-4-10]
 id=558
+type=0
 
 [item-5-10]
 id=559
+type=0
 
 [item-6-10]
 id=563
+type=0
 
 [item-7-10]
 id=564
+type=0
 
 [item-8-10]
 id=586
+type=0
 
 [item-9-10]
 id=587
+type=0
 
 [item-10-10]
 id=588
+type=0
 
 [item-11-10]
 id=589
+type=0
 
 [item-12-10]
 id=347
+type=0
 
 [item-0-11]
 id=753
+type=0
 
 [item-1-11]
 id=754
+type=0
 
 [item-4-11]
 id=565
+type=0
 
 [item-5-11]
 id=566
+type=0
 
 [item-6-11]
 id=567
+type=0
 
 [item-7-11]
 id=590
+type=0
 
 [item-8-11]
 id=591
+type=0
 
 [item-9-11]
 id=592
+type=0
 
 [item-12-3]
 id=308
+type=0
 
 [item-1-0]
 id=751
+type=0
 
 [item-5-6]
 id=127
+type=0
 
 [item-10-6]
 id=45
+type=0
 
 [item-11-6]
 id=757
+type=0
 
 [item-13-1]
 id=505
+type=0
 
 [item-13-2]
 id=92
+type=0
 
 [item-8-8]
 id=344
+type=0
 
 [item-9-6]
 id=303
+type=0
 
 [item-8-6]
 id=1090
+type=0
 
 [item-7-6]
 id=1089
+type=0
 
 [item-6-6]
 id=304
+type=0
 
 [item-8-2]
 id=301
+type=0
 
 [item-7-2]
 id=302
+type=0
 
 [item-2-6]
 id=348
+type=0
 
 [item-3-7]
 id=351
+type=0
 
 [item-4-7]
 id=593
+type=0
 
 [item-5-7]
 id=350
+type=0
 
 [item-10-8]
 id=594
+type=0
 
 [item-10-7]
 id=349
+type=0
 
 [item-11-7]
 id=758
+type=0
+
+[item-6-7]
+id=277
+type=0
+
+[item-7-7]
+id=278
+type=0
